Fix spacing below Menu button

--- a/src/components/HeaderMenu/index.css
+++ b/src/components/HeaderMenu/index.css
@@ -4,7 +4,7 @@
     display: none;
     min-width: 140px;
     position: absolute;
-    top: 31px;
+    top: 24px;
     z-index: 1;
 }
 
